[package]
name = "languages-github-actions"
description = "GitHub Actions for the Languages Team"
version = "0.0.0"
rust-version = "1.66"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
console = "0.15.5"
glob = "0.3.1"
tree-sitter = "0.20.10"
tree-sitter-toml = "0.20.0"
tree-sitter-md = "0.1.5"
libcnb-data = "0.11.5"
toml = "0.7.1"
rand = "0.8.5"

[dev-dependencies]