[package]
name = "languages-github-actions"
description = "GitHub Actions for the Languages Team"
version = "0.0.6"
repository = "https://github.com/colincasey/languages-github-actions.git"
rust-version = "1.66"
edition = "2021"
publish = false

[[bin]]
name = "actions"
path = "src/main.rs"

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
libcnb-data = { git = "https://github.com/heroku/libcnb.rs", branch = "ccasey-malax-pairing" }
libcnb-package = { git = "https://github.com/heroku/libcnb.rs", branch = "ccasey-malax-pairing" }
markdown = "1.0.0-alpha.9"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.1"

[dev-dependencies]